--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 		<title>furw - 个人主页</title>
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
@@ -12,7 +13,7 @@
 		<div class="content">
 			<div class="head">
 
-				<img src="img/tx2.jpg" />
+				<img src="img/22.jpg" />
 				<p>furuiwei - Developer </p>
 
 			</div>
