--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<a target="view_window" href="https://www.zhihu.com/people/furuiwei/activities">知乎</a>
 					</li>
 					<li>
-						<a target="view_window" href="https://www.jianshu.com/u/0bf988d5a439">简书</a>
+						<a target="view_window" href="https://segmentfault.com/u/furw">segmentfault 思否</a>
 					</li>
 					<li>
 						<a target="view_window" href="https://my.oschina.net/furw">开原中国</a>
@@ -36,7 +36,7 @@
 						<a target="view_window " href="https://github.com/furw">Github</a>
 					</li>
 					<li>
-						<a target="view_window" href="https://www.douban.com/people/furw/">豆瓣</a>
+						<a target="view_window" href="https://gitee.com/Warehouse">码云</a>
 					</li>
 					<li>
 						<a target="view_window " href="http://www.linkedin.com/in/furuiwei">LinkedIn</a>
