--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="content">
 			<div class="head">
 
-				<img src="http://ohv1ysl39.bkt.clouddn.com/v2-e0f8a41f7e40cc6390f2340b8f76040c_xll.jpg" />
+				<img src="http://ohv1ysl39.bkt.clouddn.com/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20180611143700.jpg" />
 				<p>furuiwei - Developer </p>
 
 			</div>
