--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="content">
 			<div class="head">
 
-				<img src="http://ohv1ysl39.bkt.clouddn.com/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20180611143700.jpg" />
+				<img src="https://images2015.cnblogs.com/news/66372/201704/66372-20170424000547788-14664961.jpg" />
 				<p>furuiwei - Developer </p>
 
 			</div>
