--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="content">
 			<div class="head">
 
-				<img src="http://imglf5.nosdn0.126.net/img/a29VV1hzSzZJUkxSVFRFbGFpNFozQmlIQitzTHJDMnBBVFpLdmNnUDRBRjNPOTdIZEpzT3ZBPT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg%7Cwatermark&type=2&text=wqkgZnVydyAvIGZ1cnVpd2VpLmxvZnRlci5jb20=&font=bXN5aA==&gravity=southwest&dissolve=30&fontsize=340&dx=16&dy=20&stripmeta=0" />
+				<img src="https://ss1.bdstatic.com/70cFv8Sh_Q1YnxGkpoWK1HF6hhy/it/u=3600553038,299872831&fm=26&gp=0.jpg" />
 				<p>furuiwei - Developer </p>
 
 			</div>
