--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="content">
 			<div class="head">
 
-				<img src="http://imglf6.nosdn0.126.net/img/a29VV1hzSzZJUkxROWVIMCtHK09jdWtpcmZFWXVISTQvTk83SlNrY2paK0F4b2tUNkFsSmN3PT0.jpg?imageView&thumbnail=1680x0&quality=96&stripmeta=0&type=jpg%7Cwatermark&type=2&text=wqkgZnVydyAvIGZ1cnVpd2VpLmxvZnRlci5jb20=&font=bXN5aA==&gravity=southwest&dissolve=30&fontsize=240&dx=8&dy=10&stripmeta=0" />
+				<img src="http://5b0988e595225.cdn.sohucs.com/images/20171102/fbbe1de137a649ca86a8d07de1d6c4dd.jpeg" />
 				<p>furuiwei - Developer </p>
 
 			</div>
