--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="content">
 			<div class="head">
 
-				<img src="http://5b0988e595225.cdn.sohucs.com/images/20171102/fbbe1de137a649ca86a8d07de1d6c4dd.jpeg" />
+				<img src="img/tx.jpg" />
 				<p>furuiwei - Developer </p>
 
 			</div>
