--- a/index.html
+++ b/index.html
@@ -35,42 +35,42 @@
 
 	<body>
 
-		<div class="_body">
-			<div class="_head">
-				<img class="tx" src="img/tx.jpg" />
-				<p class="name">furuiwei - Developer </p>
-				<p class="describe">前端工程师，擅长各项前端技能，深入研究移动端开发与前端性能, 喜欢折腾新技术。</p>
-			</div>
+		<div class="_body"></div>
 
-			<div class="_centent">
-				<ul>
-					<li onclick="fun(1)">
-						<img src="img/zhihu.jpg" />
-						<a>知乎</a>
-					</li>
-					<li onclick="fun(2)">
-						<img src="img/wangyiyun.jpg" />
-						<a>网易云音乐</a>
-					</li>
-					<li onclick="fun(3)">
-						<img src="img/github.jpg" />
-						<a>Github</a>
-					</li>
-					<li onclick="fun(4)">
-						<img src="img/kaiyuan.jpg" />
-						<a>开原中国</a>
-					</li>
-					<li onclick="fun(5)">
-						<img src="img/mayun.jpg" />
-						<a>码云</a>
-					</li>
-					<li onclick="fun(6)">
-						<img src="img/linkedIn.jpg" />
-						<a>LinkedIn</a>
-					</li>
-				</ul>
-			</div>
+		<div class="_head">
+			<img class="tx" src="img/tx.jpg" />
+			<p class="name">furuiwei - Developer </p>
+			<p class="describe">前端工程师，擅长各项前端技能，深入研究移动端开发与前端性能, 喜欢折腾新技术。</p>
 		</div>
-		
+
+		<div class="_centent">
+			<ul>
+				<li onclick="fun(1)">
+					<img src="img/zhihu.jpg" />
+					<a>知乎</a>
+				</li>
+				<li onclick="fun(2)">
+					<img src="img/wangyiyun.jpg" />
+					<a>网易云音乐</a>
+				</li>
+				<li onclick="fun(3)">
+					<img src="img/github.jpg" />
+					<a>Github</a>
+				</li>
+				<li onclick="fun(4)">
+					<img src="img/kaiyuan.jpg" />
+					<a>开原中国</a>
+				</li>
+				<li onclick="fun(5)">
+					<img src="img/mayun.jpg" />
+					<a>码云</a>
+				</li>
+				<li onclick="fun(6)">
+					<img src="img/linkedIn.jpg" />
+					<a>LinkedIn</a>
+				</li>
+			</ul>
+		</div>
+
 	</body>
 </html>
