--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 		<div class="_head">
 			<img class="tx" src="img/tx.jpg" />
-			<p class="name">furuiwei - Developer </p>
-			<p class="describe">前端工程师，擅长各项前端技能，深入研究移动端开发与前端性能, 喜欢折腾新技术。</p>
+			<p class="name">Furuiwei - Developer </p>
+			<p class="describe">一枚前端开发，擅长各项前端技能，深入研究移动端开发与前端性能, 喜欢折腾新技术。</p>
 		</div>
 
 		<div class="_centent">
